// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterInput /> matches snapshot with no filters 1`] = `
"
<form
  class=\\"flex-grow-1 flex-shrink-1 mr-auto\\"
  style=\\"min-width: 0px;\\"
>
  <div class=\\"input-group w-100 me-2 components-filterinput-outer bg-focused\\">
    <div class=\\"form-control components-filterinput border-0 rounded-0 bg-inherit\\">
      <div
        class=\\"autosuggest d-inline-block mw-100\\"
        role=\\"combobox\\"
        aria-haspopup=\\"listbox\\"
        aria-owns=\\"downshift-0-menu\\"
        aria-expanded=\\"false\\"
      >
        <span class=\\"input-group-text text-muted d-inline-block me-2 border-0 bg-inherit px-1\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"magnifying-glass\\"
            class=\\"svg-inline--fa fa-magnifying-glass \\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 512 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z\\"
            >
            </path>
          </svg>
        </span>
        <input
          class=\\"components-filterinput-wrapper text-white mw-100\\"
          size=\\"1\\"
          id=\\"downshift-0-input\\"
          aria-autocomplete=\\"list\\"
          aria-controls=\\"downshift-0-menu\\"
          aria-labelledby=\\"downshift-0-label\\"
          autocomplete=\\"off\\"
          value
        >
      </div>
      <span
        class=\\"dropdown\\"
        id=\\"downshift-0-menu\\"
        role=\\"listbox\\"
        aria-labelledby=\\"downshift-0-label\\"
      >
      </span>
    </div>
    <span class=\\"input-group-text border-0 rounded-0 bg-inherit px-0\\">
      <button
        class=\\"btn border-0 rounded-0 bg-inherit cursor-pointer components-navbar-history px-2 py-0 components-navbar-icon\\"
        type=\\"button\\"
        data-toggle=\\"dropdown\\"
        aria-haspopup=\\"true\\"
        aria-expanded=\\"true\\"
      >
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"caret-down\\"
          class=\\"svg-inline--fa fa-caret-down \\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 320 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z\\"
          >
          </path>
        </svg>
      </button>
    </span>
  </div>
</form>
"
`;

exports[`<FilterInput /> matches snapshot with some filters 1`] = `
"
<form
  class=\\"flex-grow-1 flex-shrink-1 mr-auto\\"
  style=\\"min-width: 0px;\\"
>
  <div class=\\"input-group w-100 me-2 components-filterinput-outer bg-focused\\">
    <div class=\\"form-control components-filterinput border-0 rounded-0 bg-inherit\\">
      <button
        type=\\"button\\"
        class=\\"btn-secondary btn-sm components-filteredinputlabel components-label btn d-inline-flex flex-row align-items-center\\"
      >
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"spinner\\"
          class=\\"svg-inline--fa fa-spinner fa-spin \\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 512 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M304 48C304 74.51 282.5 96 256 96C229.5 96 208 74.51 208 48C208 21.49 229.5 0 256 0C282.5 0 304 21.49 304 48zM304 464C304 490.5 282.5 512 256 512C229.5 512 208 490.5 208 464C208 437.5 229.5 416 256 416C282.5 416 304 437.5 304 464zM0 256C0 229.5 21.49 208 48 208C74.51 208 96 229.5 96 256C96 282.5 74.51 304 48 304C21.49 304 0 282.5 0 256zM512 256C512 282.5 490.5 304 464 304C437.5 304 416 282.5 416 256C416 229.5 437.5 208 464 208C490.5 208 512 229.5 512 256zM74.98 437C56.23 418.3 56.23 387.9 74.98 369.1C93.73 350.4 124.1 350.4 142.9 369.1C161.6 387.9 161.6 418.3 142.9 437C124.1 455.8 93.73 455.8 74.98 437V437zM142.9 142.9C124.1 161.6 93.73 161.6 74.98 142.9C56.24 124.1 56.24 93.73 74.98 74.98C93.73 56.23 124.1 56.23 142.9 74.98C161.6 93.73 161.6 124.1 142.9 142.9zM369.1 369.1C387.9 350.4 418.3 350.4 437 369.1C455.8 387.9 455.8 418.3 437 437C418.3 455.8 387.9 455.8 369.1 437C350.4 418.3 350.4 387.9 369.1 369.1V369.1z\\"
          >
          </path>
        </svg>
        <div class=\\"components-filteredinputlabel-text flex-grow-1 flex-shrink-1 ms-1 tooltip-trigger\\">
          <span
            tabindex=\\"0\\"
            class=\\"cursor-text px-1\\"
          >
            foo=bar
          </span>
        </div>
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"xmark\\"
          class=\\"svg-inline--fa fa-xmark cursor-pointer text-reset ms-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 320 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z\\"
          >
          </path>
        </svg>
      </button>
      <button
        type=\\"button\\"
        class=\\"btn-secondary btn-sm components-filteredinputlabel components-label btn d-inline-flex flex-row align-items-center\\"
      >
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"spinner\\"
          class=\\"svg-inline--fa fa-spinner fa-spin \\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 512 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M304 48C304 74.51 282.5 96 256 96C229.5 96 208 74.51 208 48C208 21.49 229.5 0 256 0C282.5 0 304 21.49 304 48zM304 464C304 490.5 282.5 512 256 512C229.5 512 208 490.5 208 464C208 437.5 229.5 416 256 416C282.5 416 304 437.5 304 464zM0 256C0 229.5 21.49 208 48 208C74.51 208 96 229.5 96 256C96 282.5 74.51 304 48 304C21.49 304 0 282.5 0 256zM512 256C512 282.5 490.5 304 464 304C437.5 304 416 282.5 416 256C416 229.5 437.5 208 464 208C490.5 208 512 229.5 512 256zM74.98 437C56.23 418.3 56.23 387.9 74.98 369.1C93.73 350.4 124.1 350.4 142.9 369.1C161.6 387.9 161.6 418.3 142.9 437C124.1 455.8 93.73 455.8 74.98 437V437zM142.9 142.9C124.1 161.6 93.73 161.6 74.98 142.9C56.24 124.1 56.24 93.73 74.98 74.98C93.73 56.23 124.1 56.23 142.9 74.98C161.6 93.73 161.6 124.1 142.9 142.9zM369.1 369.1C387.9 350.4 418.3 350.4 437 369.1C455.8 387.9 455.8 418.3 437 437C418.3 455.8 387.9 455.8 369.1 437C350.4 418.3 350.4 387.9 369.1 369.1V369.1z\\"
          >
          </path>
        </svg>
        <div class=\\"components-filteredinputlabel-text flex-grow-1 flex-shrink-1 ms-1 tooltip-trigger\\">
          <span
            tabindex=\\"0\\"
            class=\\"cursor-text px-1\\"
          >
            baz!=bar
          </span>
        </div>
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"xmark\\"
          class=\\"svg-inline--fa fa-xmark cursor-pointer text-reset ms-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 320 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z\\"
          >
          </path>
        </svg>
      </button>
      <div
        class=\\"autosuggest d-inline-block mw-100\\"
        role=\\"combobox\\"
        aria-haspopup=\\"listbox\\"
        aria-owns=\\"downshift-2-menu\\"
        aria-expanded=\\"false\\"
      >
        <input
          class=\\"components-filterinput-wrapper text-white mw-100\\"
          size=\\"1\\"
          id=\\"downshift-2-input\\"
          aria-autocomplete=\\"list\\"
          aria-controls=\\"downshift-2-menu\\"
          aria-labelledby=\\"downshift-2-label\\"
          autocomplete=\\"off\\"
          value
        >
      </div>
      <span
        class=\\"dropdown\\"
        id=\\"downshift-2-menu\\"
        role=\\"listbox\\"
        aria-labelledby=\\"downshift-2-label\\"
      >
      </span>
    </div>
    <span class=\\"input-group-text border-0 rounded-0 bg-inherit px-0\\">
      <button
        class=\\"btn border-0 rounded-0 bg-inherit cursor-pointer components-navbar-history px-2 py-0 components-navbar-icon\\"
        type=\\"button\\"
        data-toggle=\\"dropdown\\"
        aria-haspopup=\\"true\\"
        aria-expanded=\\"true\\"
      >
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"caret-down\\"
          class=\\"svg-inline--fa fa-caret-down \\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 320 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z\\"
          >
          </path>
        </svg>
      </button>
    </span>
  </div>
</form>
"
`;
